--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/etInputEP"
+        android:id="@+id/eteInputEP"
         android:layout_width="33dp"
         android:layout_height="45dp"
         android:layout_marginTop="28dp"
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.341"
         app:layout_constraintStart_toEndOf="@+id/tvEP"
-        app:layout_constraintTop_toBottomOf="@+id/etInputTA" />
+        app:layout_constraintTop_toBottomOf="@+id/eteInputTA" />
 
     <TextView
         android:id="@+id/tvTA"
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvTA" />
 
     <Button
-        android:id="@+id/buttonCalcular"
+        android:id="@+id/butCalcular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -56,10 +56,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="calcResult"/>
 
     <EditText
-        android:id="@+id/etInputTA"
+        android:id="@+id/eteInputTA"
         android:layout_width="33dp"
         android:layout_height="45dp"
         android:layout_marginTop="108dp"
@@ -71,13 +72,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvTeVasX"
+        android:id="@+id/tviTeVasX"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/te_vas_por"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCalcular"
+        app:layout_constraintBottom_toTopOf="@+id/butCalcular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.312"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,11 +92,11 @@
         android:text=""
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCalcular"
+        app:layout_constraintBottom_toTopOf="@+id/butCalcular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.408"
-        app:layout_constraintStart_toEndOf="@+id/tvTeVasX"
-        app:layout_constraintTop_toBottomOf="@+id/etInputEP"
+        app:layout_constraintStart_toEndOf="@+id/tviTeVasX"
+        app:layout_constraintTop_toBottomOf="@+id/eteInputEP"
         app:layout_constraintVertical_bias="0.545" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
